# Astar

./: CMakeLists.txt  README.md
inc/: Node.h  myAstar.h
src/: Node.cpp  main.cpp  myAstar.cpp
